--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "ler-gtfs-maker",
-  "module": "src/index.ts",
+  "name": "@kevinbioj/sncf-gtfs-shapes-producer",
+  "main": "dist/index.js",
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "devDependencies": {
+    "@types/decompress": "^4.2.7",
+    "@types/node": "^22.9.0",
+    "decompress": "^4.2.1",
+    "typescript": "^5.6.3"
   }
 }
